--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2831,14 +2831,11 @@ section {
 .text-color1{
   color: black
 }
-
 #a2ik-services {
   background-color: #98c1d9;
-   /* #AED9DA; */
   padding: 60px 0;
   border-top: 1px solid #eee;
   text-decoration: white;
-  filter: blur(4); 
 }
 
 .my-container {
@@ -2869,17 +2866,12 @@ section {
   align-items: center;
 }
 
-.arrow {
-  margin-right: 10px;
-}
-
 .section-heading {
   font-size: 36px;
   font-weight: 700;
   margin-left: 10px;
 }
 
-/* Service Columns */
 .service-parent {
   display: flex;
   justify-content: space-between;
@@ -2896,7 +2888,6 @@ section {
   padding: 20px;
 }
 
-/* Service Container */
 .services-container {
   margin-bottom: 40px;
   text-align: center;
@@ -2908,15 +2899,16 @@ section {
   margin-bottom: 20px;
 }
 
-
-.services-parargraph {
+.services-paragraph {
   font-size: 16px;
   line-height: 1.5;
   margin-bottom: 20px;
 }
-.text-color{
+
+.text-color {
   color: white;
 }
+
 .more-width-2,
 .more-width-3,
 .more-width {
@@ -2929,54 +2921,70 @@ section {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
-  padding-top: 5;
 }
 
-
-
-.image-subchild{
-  justify-content: center;
-  justify-items: center;
-  margin-top: 80px;
-  width: 250px;
+.image-child {
+  width: 100%;
+  max-width: 290px;
+  height: auto;
 }
+
+.image-subchild {
+  width: 100%;
+  height: auto;
+  margin-top: 75px;
+}
+
 .border-right-grid {
   border-right: 1px solid #eee;
 }
 
-/* .border-left-services,
-.border-right-services {
-  width: 100%;
-  height: 1px;
-  background-color: #eee;
-  margin: 20px 0;
-} */
+@media (max-width: 992px) {
+  .service-column {
+    width: 48%;
+    margin-bottom: 20px;
+  }
 
-.services-contact-cta {
-  text-align: center;
-  margin-top: 40px;
+  .section-heading {
+    font-size: 28px;
+  }
+
+  .services-heading {
+    font-size: 24px;
+  }
 }
 
-.services-contact-heading {
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 20px;
+@media (max-width: 768px) {
+  .service-column {
+    width: 100%;
+  }
+
+  .image-child {
+    height: auto;
+    max-width: 100%;
+  }
+
+  .section-heading {
+    font-size: 24px;
+  }
+
+  .services-heading {
+    font-size: 20px;
+  }
 }
 
-.section-cta-large-contact {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-}
+@media (max-width: 576px) {
+  .services-paragraph {
+    font-size: 14px;
+  }
 
-.arrow-cta {
-  margin-right: 10px;
-}
+  .section-heading {
+    font-size: 20px;
+  }
 
-.section-cta-text-large {
-  font-size: 20px;
-  font-weight: 700;
+  .services-heading {
+    font-size: 18px;
+  }
 }
 
 /* Mobile Styling */
