--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3404,16 +3404,29 @@ a:hover {
 
 @media (max-width: 576px) {
   .heading-alt {
-    margin-top: 30px; /* Add more space above "A2ik" for smaller screens */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px; /* Add space above "A2ik" */
+    font-size: medium; /* Add more space above "A2ik" for smaller screens */
   }
 
   #heading1-alt {
     margin-top: 15px; /* Adjust this value as needed */
+    margin-left: 5px; /* Adjust this value as needed */
+    font-size: 150%;
+  font-weight: normal;
+  letter-spacing: 1px;
+
 
   }
 
   #heading3-alt {
     margin-top: 15px; /* Adjust this value as needed */
+    font-size: 200%;
+    font-weight: 200;
+    letter-spacing: 1px;
+    margin-left: 5px;
   }
 }
 
